# nbexchange

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTIING.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  dockerised_exchange.odg  file_exchange.odg  how_it_works.md  load_test.py  local.yaml  package.json  pyproject.toml  requirements-dev.txt  requirements-load.txt  requirements.txt  setup.cfg  setup.py  soak_trial.py  specification.md  supervisord.conf  testresults.xml
.github/workflows/: coverage.yml  linted.yml  main.yml  notifications.yml  pythonapp.yml  test.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap-file.yaml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
demo_exchange_server/: Dockerfile  nbexchange_config.py
docker/: nbexchange_config.py  supervisord.conf
docker/initdb/: schema-data-init.sql
docs/: api.rst  changelog.rst  exchange_api.rst  index.rst  nbgrader-exchange-calls.rst
load_test_data/released/: test_1.ipynb
nbexchange/: __init__.py  __main__.py  __version__.py  alembic.ini  apihandlers.py  app.py  base.py  database.py  dbutil.py  orm.py
nbexchange/alembic/: README.md  env.py
nbexchange/alembic/versions/: 20190402_add_collected_action.py  2021-08-20-15-24-21_change_subscription_column_width.py  2024093001_add_emal_and_lms_to_user.py  2805bf7747e5_change_feedback_timestamp_column_type_.py  6f2a6c00affb_add_feedback_to_ation_enum_type.py  7aa7d804f8ef_add_external_id_column.py  9794df114fd9_initialise.py  bfe19408f64f_add_full_name_to_user.py  d500457efb3b_create_nb_exchange_tables.py  f26d6a79159d_add_checksum_column.py  f3345539f08d_change_assignment_name_data_type.py
nbexchange/handlers/: __init__.py  assignment.py  base.py  collection.py  feedback.py  history.py  pages.py  submission.py  user.py
nbexchange/handlers/abc/: naas_user_handler.py  user_handler.py
nbexchange/handlers/auth/: jupyterhub_user_handler.py  naas_user_handler.py  user_handler.py
nbexchange/models/: __init__.py  actions.py  assignments.py  courses.py  feedback.py  notebooks.py  subscriptions.py  users.py
nbexchange/nbextensions/history_list/: main.js  nbexchange_history.css  nbexchange_history.js
nbexchange/nbextensions/nbexchange_history/: main.js  nbexchange_history.css  nbexchange_history.js  sorttable.js
nbexchange/plugin/: __init__.py  collect.py  course.py  exchange.py  fetch.py  fetch_assignment.py  fetch_feedback.py  filestore.py  history.py  list.py  noteable_auth.py  release.py  release_assignment.py  release_feedback.py  submit.py  util.py
nbexchange/server_extensions/nbexchange_history/: handlers.py
nbexchange/templates/: assignment.html  env.html  error.html  page.html  release.html  user.html  whoami.html
nbexchange/tests/: conftest.py  mocking.py  test_dbutil.py  test_handlers.py  test_handlers_assignment_post.py  test_handlers_auth.py  test_handlers_base.py  test_handlers_collection.py  test_handlers_collections.py  test_handlers_delete.py  test_handlers_feedback.py  test_handlers_fetch.py  test_handlers_full_cycle_list.py  test_handlers_history.py  test_handlers_list.py  test_handlers_release.py  test_handlers_submision.py  test_handlers_submission.py  test_handlers_submissions.py  test_orm.py  test_plugin_collect.py  test_plugin_exchange.py  test_plugin_exchange_with_bespoke_apiPlugin.py  test_plugin_feedback.py  test_plugin_fetch_assignment.py  test_plugin_fetch_feedback.py  test_plugin_list.py  test_plugin_list_assignments.py  test_plugin_list_delete.py  test_plugin_list_feedback.py  test_plugin_release_assignment.py  test_plugin_release_feedback.py  test_plugin_submit.py  test_smoketest.py  test_something.py  testing_plugin_config.py  utils.py
nbexchange/tests/data/: assignment-0.6-2.html  assignment-0.6-wrong.ipynb  assignment-0.6.html
notebook/: Dockerfile  jupyter_notebook_config.py  nbgrader_config.py
plugin/: __init__.py  collect.py  course.py  exchange.py  fetch_assignment.py  list.py  noteable_auth.py  release_assignment.py  submit.py
scripts/: nbexchange
soak_trial_data/feedback/: test_1.html
soak_trial_data/released/: sample_data.csv
