[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "nbexchange"
version = "1.2.9"
description = "Jupyterhub extension that provides an exchange service for nbgrader."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["nbgrader", "jupyter", "notebook"]
authors = [
  {email = "Ian.Stuart@ed.ac.uk"},
  {name = "Ian Stuart"}
]
maintainers = [
  {name = "Ian Stuart", email = "Ian.Stuart@ed.ac.uk"},
  {name = "Ludvig Kihlman"},
  {name = "Bert Robberechts"},
  {name = "Andrew Seales"},
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Intended Audience :: Education",
]

# pyjwt limited due to djangorestframework-jwt dependencies
dependencies = [
  "alembic>=1.6.5",
  "jupyterhub>=1.4.1",
  "nbgrader==0.7.1", # From pypi! dated June 23rd 2022 too
  "psycopg2-binary>=2.8.6",
  "pyjwt<2",
  "sentry-sdk==1.14.0",
  "sqlalchemy>=1.4.3",
  "tornado==6.1",
  "tornado-prometheus==0.1.1",
]

[project.optional-dependencies]
test = [
  "beautifulsoup4>=2.9.3",
  "html5lib>=1.1",
  "mock>=4.0.2",
  "psycopg2-binary>=2.8.6",
  "pytest>=6.1.2",
  "pytest-cov[all]>=2.10.1",
  "pytest-docker-tools>=1.0",
  "pytest-tornado>=0.8.1",
]

[project.urls]
homepage = "https://edina.ac.uk"
documentation = "https://nbexchange.readthedocs.org"
repository = "https://github.com/edina/nbexchange"
changelog = "https://github.com/edina/nbexchange/blob/master/CHANGELOG.md"

[project.scripts]
nbexchange = "nbexchange.app:NbExchange.launch_instance"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["nbexchange"]