[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "nbexchange"
version = "1.4.0"
description = "Jupyter extension that provides an external exchange service for nbgrader."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
keywords = ["nbgrader", "jupyter", "notebook"]
authors = [
  {email = "Ian.Stuart@ed.ac.uk"},
  {name = "Ian Stuart"}
]
maintainers = [
  {name = "Ian Stuart", email = "Ian.Stuart@ed.ac.uk"},
  {name = "Harry Newton"},
  {name = "Alasdair Macleod"},
  {name = "Andrew Seales"},
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Education",
]

# These values need to match nbgrader, jupyterlab, and/or the api
dependencies = [
  "nbgrader==0.9.4",
  "alembic>=1.7",
  "jupyter_server>=2",
  "sqlalchemy>=1.4,<3",
  "psycopg2-binary>=2.9.9",
  "pyjwt<2",
  "sentry-sdk==2.2.0",
  "tornado==6.4",
  "tornado-prometheus==0.1.2",
]

[project.optional-dependencies]
test = [
  "beautifulsoup4>=4.12.3",
  "html5lib>=1.1",
  "mock>=5.1.0",
  "pytest>=8.0.0",
  "pytest-cov[all]>=4.1.0",
  "pytest-docker-tools>=3.1.3",
  "pytest-tornado>=0.8.1",
  "isort>=5.13.2",
  "black>=24.1.1",
  "flake8>=7.0.0",
]

[project.urls]
homepage = "https://edina.ac.uk"
documentation = "https://nbexchange.readthedocs.org"
repository = "https://github.com/edina/nbexchange"
changelog = "https://github.com/edina/nbexchange/blob/master/CHANGELOG.md"

[project.scripts]
nbexchange = "nbexchange.app:NbExchange.launch_instance"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["nbexchange"]