[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "nbexchange"
version = "1.4.0"
description = "Jupyter extension that provides an external exchange service for nbgrader."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
keywords = ["nbgrader", "jupyter", "notebook"]
authors = [
  {email = "Ian.Stuart@ed.ac.uk"},
  {name = "Ian Stuart"}
]
maintainers = [
  {name = "Ian Stuart", email = "Ian.Stuart@ed.ac.uk"},
  {name = "Harry Newton"},
  {name = "Alasdair Macleod"},
  {name = "Andrew Seales"},
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Education",
]

# These values need to match nbgrader, jupyterlab, and/or the api
dependencies = [
  "nbgrader==0.9.5",
  "alembic>=1.7",
  "jupyter_server>=2",
  "sqlalchemy>=1.4,<3",
  "psycopg2-binary>=2.9.9",
  "pyjwt<2",
  "sentry-sdk==2.23.1",
  # matches jupyterlab
  "tornado>=6.2",
  "tornado-prometheus==0.1.2",
]

[project.optional-dependencies]
test = [
  "beautifulsoup4>=4.12.3",
  "html5lib>=1.1",
  "mock>=5.1",
  "pytest>=8.3.4",
  "pytest-cov[all]>=6.0",
  "pytest-docker-tools>=3.1.3",
  "pytest-tornado>=0.8.1",
  "isort>=5.13",
  "black>=24.10",
  "flake8>=7.1",
]

[project.urls]
homepage = "https://github.com/edina/nbexchange"
documentation = "https://github.com/edina/nbexchange"
repository = "https://github.com/edina/nbexchange"
changelog = "https://github.com/edina/nbexchange/blob/master/CHANGELOG.md"

[project.scripts]
nbexchange = "nbexchange.app:NbExchange.launch_instance"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["nbexchange"]